cmake_minimum_required(VERSION 2.6)

add_subdirectory(hdlcd-dissector)
add_subdirectory(hdlcd-hexdump)
add_subdirectory(hdlcd-hexdump-payload)
add_subdirectory(hdlcd-hexinjector)
add_subdirectory(hdlcd-monitor)
add_subdirectory(hdlcd-pcapstreamer)
add_subdirectory(hdlcd-pcapstreamer-payload)
add_subdirectory(hdlcd-portkiller)
add_subdirectory(hdlcd-suspender)
add_subdirectory(hdlcd-logclient)
if(NOT WIN32)
    # On MS Windows, this tool currently has problems with either posix threads or async IO on STDIN...
    add_subdirectory(hdlcd-hexchanger)
endif()
